# next13-simple/models/people.ts
@@ -1,10 +1,0 @@
-import { Company } from './company';
-
-export interface People {
-  id: string;
-  name: string;
-  phone?: string;
-  address?: string;
-  age?: number;
-  company?: Company;
-}
